--- a/Jewelry Application/Jewelry Application.csproj
+++ b/Jewelry Application/Jewelry Application.csproj
@@ -43,9 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MaterialJewelry.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="Jewelry.cs" />
+    <Compile Include="Order.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeJewelry.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
