Entity Framework related modifications

--- a/Jewelry Application/App.config
+++ b/Jewelry Application/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="JewelerModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Jewelry_Application.JewelerModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="JewelerModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Jewelry_Application;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
