UI Changes - Orders menu

--- a/JewelryApplicationUI/Web.config
+++ b/JewelryApplicationUI/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-JewelryApplicationUI-20160617040448.mdf;Initial Catalog=aspnet-JewelryApplicationUI-20160617040448;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+   
+    <add name="JewelerModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Jewelry_Application;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
